--- a/exploration/index.html
+++ b/exploration/index.html
@@ -2,6 +2,7 @@
 <title>blockup</title>
 <link href='dist.css' rel='stylesheet' />
 <body>
+	<main></main>
   <script src='https://d3js.org/d3.v5.min.js'></script>
   <script src='dist.js'></script>
 </body>
